--- a/mysql-deployment.yaml
+++ b/mysql-deployment.yaml
@@ -25,12 +25,12 @@ spec:
         app: mysql
     spec:
       containers:
-      - image: mysql:5.6
+      - image: ubuntu/mysql
         name: mysql
         env:
           # Use secret in real usage
         - name: MYSQL_ROOT_PASSWORD
-          value: password
+          value: portainer1234
         ports:
         - containerPort: 3306
           name: mysql
